move PACT_FILE resolution to ext

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,10 @@ project(':microservices-pact-provider') {
     apply plugin: 'au.com.dius.pact'
     apply plugin: 'com.github.johnrengelman.processes'
 
+    ext {
+      pactFilePath = "$System.env.PACT_FILE" 
+    }
+
     task startProvider(type: com.github.jengelman.gradle.plugins.processes.tasks.JavaFork) {
       classpath = files('microservices-pact-provider/build/libs/microservices-pact-provider-0.0.1-SNAPSHOT.jar')
       classpath += sourceSets.main.runtimeClasspath
@@ -78,7 +82,7 @@ project(':microservices-pact-provider') {
                 startProviderTask = 'startProvider'
                 terminateProviderTask = 'stopProvider'
                 hasPactWith('fooConsumer') {
-                    pactFile = file(System.getenv("PACT_FILE"))
+                    pactFile = file(pactFilePath)
                 }
             }
         }
