--- a/microservices-pact-consumer/manifest.yml
+++ b/microservices-pact-consumer/manifest.yml
@@ -2,5 +2,5 @@
 applications:
 - name: foo-consumer
   memory: 512M
-  path: microservices-pact-consumer-0.0.1-SNAPSHOT.jar
+  path: ../../microservices-pact-consumer-0.0.1-SNAPSHOT.jar
   instances: 1
