update inputs for task

--- a/microservices-pact-consumer/task.yml
+++ b/microservices-pact-consumer/task.yml
@@ -3,7 +3,7 @@ platform: linux
 image: docker:///java#8
 inputs:
 - name: microservices-pact
-  path: .
+- name: foo-consumer-version
 params:
     TERM: dumb
 run:
