--- a/microservices-pact-consumer/task.yml
+++ b/microservices-pact-consumer/task.yml
@@ -3,7 +3,9 @@ platform: linux
 image: docker:///java#8
 inputs:
 - name: microservices-pact
+  path: .
 - name: foo-consumer-version
+  path: .
 params:
     TERM: dumb
 run:
