--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ project(':microservices-pact-consumer') {
     }
 
     jar.doFirst {
-        version = new File('../foo-consumer-version/number').text
+        version = new File('number').text
     }
 }
 
@@ -79,7 +79,7 @@ project(':microservices-pact-provider') {
     }
 
     jar.doFirst {
-        version = new File('../foo-provider-version/number').text
+        version = new File('number').text
     }
 
     pact {
