--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,6 @@ buildscript {
     }
 }
 
-
-
 allprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
@@ -27,6 +25,17 @@ allprojects {
         maven { url "https://repo.spring.io/snapshot" }
         maven { url "https://repo.spring.io/milestone" }
     }
+
+    task loadVersion {
+        ext.myVersion = new File('number').text
+    }
+
+    task manifestFilter(type: Copy) {
+        from 'manifest.yml'
+        into 'versioned-manifest'
+        expand(version: "${loadVersion.myVersion}")
+    }
+
 }
 
 subprojects {
