--- a/microservices-pact-provider/manifest.yml
+++ b/microservices-pact-provider/manifest.yml
@@ -3,3 +3,4 @@ applications:
 - name: foo-provider
   memory: 512M
   instances: 1
+  path: ../../foo-provider/microservices-pact-provider-${version}.jar
