--- a/microservices-pact-consumer/task.yml
+++ b/microservices-pact-consumer/task.yml
@@ -7,7 +7,7 @@ inputs:
 params:
     TERM: dumb
 run:
-  path: ls
-  #args:
-  #- number
-  #- assemble
+  path: microservices-pact/gradlew
+  args:
+  - test
+  - assemble
