--- a/microservices-pact-provider/task.yml
+++ b/microservices-pact-provider/task.yml
@@ -7,6 +7,7 @@ inputs:
 params:
   TERM: dumb
   PACT_FILE: pact/Foo_Consumer-Foo_Provider.json
+  VERSION_FILE_PATH: foo-provider-version
 run:
    path: microservices-pact/gradlew
    args:
