--- a/microservices-pact-consumer/filterManifest.yml
+++ b/microservices-pact-consumer/filterManifest.yml
@@ -13,3 +13,6 @@ run:
   - -b
   - microservices-pact/build.gradle
   - :microservices-pact-consumer:manifestFilter
+outputs:
+  - name: versioned-manifest
+    path: microservices-pact/microservices-pact-consumer/versioned-manifest
