--- a/microservices-pact-consumer/task.yml
+++ b/microservices-pact-consumer/task.yml
@@ -5,8 +5,10 @@ inputs:
 - name: microservices-pact
 - name: foo-consumer-version
 outputs:
-- path: microservices-pact/microservices-pact-consumer/target/pacts
-- path: microservices-pact-consumer/build/libs
+- name: pacts
+  path: microservices-pact/microservices-pact-consumer/target/pacts
+- name: libs
+  path: microservices-pact-consumer/build/libs
 params:
     TERM: dumb
     VERSION_FILE_PATH: foo-consumer-version
