--- a/build.gradle
+++ b/build.gradle
@@ -56,8 +56,13 @@ subprojects {
 }
 
 project(':microservices-pact-consumer') {
+    test {
+      systemProperties['pact.rootDir'] = "$projectDir/../../pacts"
+    }
+
     jar {
         baseName = 'microservices-pact-consumer'
+        destinationDir = new File("$projectDir/../../libs")
     }
 
     jar.doFirst {
