reconcile provider outputs for deployable artifact and manifest

--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,7 @@ project(':microservices-pact-provider') {
 
     jar {
         baseName = 'microservices-pact-provider'
+        destinationDir = new File("$projectDir/../../provider-libs")
     }
 
     jar.doFirst {
