--- a/microservices-pact-provider/task.yml
+++ b/microservices-pact-provider/task.yml
@@ -4,6 +4,8 @@ inputs:
 - name: microservices-pact
 - name: pact
 - name: foo-provider-version
+outputs:
+- name: provider-libs
 params:
   TERM: dumb
   PACT_FILE: ../pact/Foo_Consumer-Foo_Provider.json
