fix gradle build

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ allprojects {
     }
 
     ext {
-        versionFilePath = "$System.env.VERSION_FILE_PATH"
+        //versionFilePath = "$System.env.VERSION_FILE_PATH"
+        versionFilePath = "."
     }
 
     task loadVersion {
