fix gradle build

--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,8 @@ project(':microservices-pact-provider') {
     apply plugin: 'com.github.johnrengelman.processes'
 
     ext {
-        pactFilePath = "$System.env.PACT_FILE"
+        //pactFilePath = "$System.env.PACT_FILE"
+        pactFilePath = "./microservices-pact-consumer/target/pacts/Foo_Consumer-Foo_Provider.json"
     }
 
     task startProvider(type: com.github.jengelman.gradle.plugins.processes.tasks.JavaFork) {
